Fixed - bug 320987: [Theming][Tree][Table] align CSS of Tree and Table https://bugs.eclipse.org/bugs/show_bug.cgi?id=320987 Table-Checkbox "margin" property

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/tablekit/Table.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/tablekit/Table.default.css
@@ -53,7 +53,12 @@ Table-GridLine {
 }
 
 Table-Checkbox {
+  /* 
+  For backward compatibility we have to keep the width property.
+  Deprecated, use "margin" instead.
+  */
   width: 21px;
+  margin: 0px;
   background-image: url( resource/widget/rap/button/check-unselected.png );
 }
 
